[gd_scene load_steps=4 format=2]

[ext_resource path="res://ButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/TextBox.gd" type="Script" id=2]
[ext_resource path="res://images/move.png" type="Texture" id=3]

[node name="TextBox" type="HBoxContainer"]
margin_right = 384.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mover" type="TextureRect" parent="."]
margin_right = 39.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13
texture = ExtResource( 3 )
expand = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 43.0
margin_right = 348.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
clear_button_enabled = true
placeholder_text = "Enter list item..."
caret_blink = true
caret_blink_speed = 0.5

[node name="CloseButton" type="Button" parent="."]
margin_left = 352.0
margin_right = 384.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "X"
[connection signal="mouse_entered" from="Mover" to="." method="_onMoverMouseEntered"]
[connection signal="mouse_exited" from="Mover" to="." method="_onMoverMouseExited"]
[connection signal="pressed" from="CloseButton" to="." method="_onCloseButtonPressed"]
